# neuType

./: .gitignore  NeuType-0.0.10.dmg.sha256  NeuType-0.0.8.dmg.sha256  NeuType-test.dmg.sha256  NeuType-unsigned.dmg.sha256  NeuType.dmg.sha256  Readme.md  agent.md  make_release.sh  notarize_app.sh  run.sh
NeuType/: AppIcon.icns  AppPermissionGate.swift  AudioRecorder.swift  ContentView.swift  FileDropHandler.swift  MicrophoneService.swift  ModifierKeyMonitor.swift  NeuType-Info.plist  NeuTypeApp.swift  PermissionsManager.swift  Settings.swift  ShortcutManager.swift  TranscriptionService.swift
NeuType.xcodeproj/: project.pbxproj
NeuTypeTests/: AppDelegateMenuTests.swift  AppPermissionGateTests.swift  AzureLiveCaptionProviderTests.swift  LiveCaptionLanguageValidatorTests.swift  LiveMeetingAudioPipelineTests.swift  (+30 more)
server/: PRODUCTION_DEPLOYMENT.md  README.md  alembic.ini  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 20260420_01_create_meeting_transcription_tables.py  20260420_02_add_worker_state_columns.py  20260420_03_add_anchor_state_columns.py  20260420_04_add_anchor_storage_path.py
server/meeting_transcription/: __init__.py  anchor_audio.py  app.py  audio_chunks.py  background_worker.py  config.py  db.py  errors.py  gradio_transcriber.py  models.py  repositories.py  routes.py  runtime.py  schemas.py  storage.py  transcriber.py  translation.py  worker.py
server/tests/: test_anchor_audio.py  test_gradio_transcriber.py  test_runtime.py  test_session_routes.py  test_translation.py  test_worker_processing.py
(+112 files in other folders)
