[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-transcription"
version = "0.1.0"
description = "Meeting transcription service scaffold"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["meeting_transcription*"]
