[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-transcription"
version = "0.1.0"
description = "Meeting transcription service scaffold"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "gradio_client>=1.12,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.18,<2.0",
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["meeting_transcription*"]
